fix : user menu z-index

--- a/public/assets/styles/output.css
+++ b/public/assets/styles/output.css
@@ -710,6 +710,14 @@ video {
   z-index: 200;
 }
 
+.z-\[300\] {
+  z-index: 300;
+}
+
+.z-\[1900\] {
+  z-index: 1900;
+}
+
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
